# prosperity-3

./: .gitignore  README.md  notes.md  pyproject.toml
round1/: analyze_results.ipynb  backtest_analysis.ipynb  backtests.ipynb  datamodel.py  empty_trader.py  gridsearch copy 2.ipynb  gridsearch copy.ipynb  gridsearch.ipynb  ink_analysis.ipynb  ink_research.ipynb  ink_research_new.ipynb  ink_research_new_data.ipynb  ink_trader.py  r1Manual.ipynb  r1_results.ipynb  store_data.ipynb  trader_best.py  trader_best2.py  trader_final_r1.py  trader_kin.py  trader_kin2.py  trader_r1.py
round2/: basket_algos.py  basket_algos_notes.py  basket_combinations.ipynb  basket_combinations.py  basket_eda.ipynb  basket_notes.txt  basket_research.ipynb  gridsearch copy.ipynb  gridsearch.ipynb  kin_basket_trader.py  p2basket_trader.py
round3/: burh.py  eric-research.ipynb  gridsearch.ipynb  kin-research copy.ipynb  kin-research.ipynb  kin_research_bruh.py  kin_research_export1.py  kin_rocks.py  p2_rock.py  p9_trader.py  pranav_basket.py  pranav_test_trader.py  rock_eda.ipynb  rock_research.ipynb  rock_trader.py  trader_merle.py  trader_merle_copy.py  trader_r3_v1.py
round4/: cookin_ink.py  cookin_macaron.py  cookin_macaron_og.py  gridsearch-momentum.ipynb  gridsearch.ipynb  ink-micro-deeper.ipynb  ink-micro-momentum.ipynb  ink-micro.ipynb  ink-signal-filtering.ipynb  ink_2.py  macaron_simple.py  macaron_trader.py  micro-attack.ipynb  not_cookin_ink.py  research-2.ipynb  research-3.ipynb  research-4.ipynb  research.ipynb  trader_final_r1.py
round5/: basket-reseach-2.ipynb  bestest.py  (+20 more)
(+46 files in other folders)
