[project]
name = "prosperity-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonpickle>=4.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "orjson>=3.10.16",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "prosperity3bt>=0.5.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
